Connected the frontend and backend